manifests/applications/site/local/site.http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: site
spec:
  parentRefs:
    - name: web
      namespace: config-ingress
      sectionName: https
  hostnames:
    - ${local_hostname}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: site
          port: 8080
