manifests/applications/site/local/site.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: site
spec:
  parentRefs:
    - name: ingress
  hostnames:
    - local.test
  rules:
    - backendRefs:
        - name: site
          port: 8080
