manifests/applications/site/local/site.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
spec:
  ingressClassName: haproxy
  tls:
    - secretName: site-tls
      hosts:
        - ${local_hostname}
  rules:
    - host: ${local_hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 8080
